--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -6,14 +6,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-# Request manual activation file
-- name: Request manual activation file
-  id: getManualLicenseFile
-  uses: game-ci/unity-request-activation-file@v2
+      # Checkout repository (required to test local actions)
+      - name: Checkout repository
+        uses: actions/checkout@v1
 
-# Upload artifact (Unity_v20XX.X.XXXX.alf)
-- name: Expose as artifact
-  uses: actions/upload-artifact@v1
-  with:
-    name: ${{ steps.getManualLicenseFile.outputs.filePath }}
-    path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+      # Request manual activation file
+      - name: Request manual activation file
+        id: getManualLicenseFile
+        uses: ./
+        with:
+          unityVersion: ${{ matrix.unityVersion }}
+
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - name: Expose as artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
