--- a/.github/workflows/build_project_versions.yml
+++ b/.github/workflows/build_project_versions.yml
@@ -5,7 +5,7 @@ jobs:
     name: Request manual activation file 🔑
     runs-on: windows-latest
     steps:
-# Gets Unity License from variableas asd
+# Gets Unity License from variable
       - name: Get_License
         uses: game-ci/unity-builder@v2
   	env:
