--- a/.github/workflows/build_project_versions.yml
+++ b/.github/workflows/build_project_versions.yml
@@ -13,7 +13,7 @@ UNITY_LICENSE: ${{secrets.UNITY_LICENSE}}
 with:
 targetPlatform: WebGL
 # Stores Build
-- name: Stores Build as Artifact
+name: Stores Build as Artifact
 uses: actions/upload-artifact@v2
 with:
 name: Build
