--- a/.github/workflows/build_project_versions.yml
+++ b/.github/workflows/build_project_versions.yml
@@ -1,20 +1,20 @@
 name: Build Versions
 on: [push]
 jobs:
-  build:
-    name: Request manual activation file 🔑
+  get license:
+    name: Uses license
     runs-on: windows-latest
     steps:
 # Gets Unity License from variable
       - name: Get_License
-        uses: game-ci/unity-builder@v2
+ - uses: game-ci/unity-builder@v2
 env:
-UNITY_LICENSE: ${{secrets.UNITY_LICENSE}}
+UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 with:
 targetPlatform: WebGL
 # Stores Build 234
 name: Stores Build as Artifact
-uses: actions/upload-artifact@v2
+ - uses: actions/upload-artifact@v2
 with:
 name: Build
 path: build
